# zcchen-data-struct

./: .gitignore  CMakeLists.txt  Makefile
cmake/: compiler_flags.cmake
descriptor/examples/: CMakeLists.txt  simple-c.c  simple-cpp.cpp
descriptor/src/: CMakeLists.txt  descriptor.c
headers/: CMakeLists.txt
headers/include/zcchen/: config-dll.h  object.h
include/zcchen/: descriptor.h
linked-list/: CMakeLists.txt
linked-list/include/zcchen/: linked-list.h  linked-list.hpp
linked-list/src/: linked-list.cpp
